Prevent font scaling in landscape on iOS

--- a/gui/css/basic.css
+++ b/gui/css/basic.css
@@ -102,6 +102,7 @@
     -------------------------------------------------------- */
     html {
         font: 87.5%/1.5 "Roboto", Helvetica, Arial, sans-serif; /* Base font size of 14px */
+        -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape */
     }
     
     code,
